--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "license": "ISC",
   "type": "module",
   "main": "index.js",
-  "devDependencies": {},
   "author": "",
   "description": "",
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js"
   },
-
   "dependencies": {
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "flowbite-react": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "react-router-dom": "^6.24.0"
   }
 }
