--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "",
   "scripts": {
     "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "start": "node api/index.js",
+    "built": "npm install && npm install --perfix client && npm run built --prefix client"
   },
   "dependencies": {
     "axios": "^1.7.2",
