--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "built": "npm install && npm install --perfix client && npm run built --prefix client"
+    "build": "npm install && npm install --perfix client && npm run build --prefix client"
   },
   "dependencies": {
     "axios": "^1.7.2",
