--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@ubilabs/react-geosuggest": "^2.16.2",
     "firebase": "^10.10.0",
     "flowbite-react": "^0.7.8",
+    "leaveapplication": "file:..",
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
