--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+dist-ssr
 *.local
 
 # Editor directories and files
@@ -20,6 +21,3 @@ node_modules
 *.njsproj
 *.sln
 *.sw?
-
-# Hide these details in the backend 
-.env
