--- a/client/package.json
+++ b/client/package.json
@@ -12,20 +12,25 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "@ubilabs/react-geosuggest": "^2.16.2",
+    "date-fns": "^3.6.0",
     "firebase": "^10.10.0",
     "flowbite-react": "^0.7.8",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "leaveapplication": "file:..",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.77.6",
-    "tailwind-scrollbar": "^3.1.0"
+    "tailwind-scrollbar": "^3.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
