--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,8 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
+    "react-type-animation": "^3.2.0",
+    "react-typical": "^0.1.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.77.6",
     "tailwind-scrollbar": "^3.1.0",
