--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
+    "@mui/x-charts": "^7.10.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@ubilabs/react-geosuggest": "^2.16.2",
     "date-fns": "^3.6.0",
@@ -31,6 +32,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-type-animation": "^3.2.0",
+    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "sass": "^1.77.6",
     "tailwind-scrollbar": "^3.1.0",
