otp verification added

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO = mongodb+srv://navinkumaran2004:navinoh2004@leavedatacluster.fororiu.mongodb.net/CoreDataBase?retryWrites=true&w=majority&appName=LeaveDataCluster
 JWT_SECRET=encryptdecryptsecret
+
+EMAIL= dineshkumarkkoffical@gmail.com
+EMAIL_PASSWORD = cyoexpjfbxnsxnxr
