--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "jspdf-autotable": "^3.8.2",
     "leaveapplication": "file:..",
     "moment": "^2.30.1",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
