final commit dev

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGO = mongodb+srv://navinkumaran2004:navinoh2004@leavedatacluster.fororiu.mong
 JWT_SECRET=encryptdecryptsecret
 
 EMAIL= dineshkumarkkoffical@gmail.com
-EMAIL_PASSWORD = cyoexpjfbxnsxnxr
+EMAIL_PASSWORD = gzcvfxflmqatldbb
