--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.14.1",
     "react-type-animation": "^3.2.0",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
