--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.7",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
