--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "flowbite-react": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "otp-generator": "^4.0.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "xlsx": "^0.18.5"
   }
 }
