--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "jspdf-autotable": "^3.8.2",
     "leaveapplication": "file:..",
     "moment": "^2.30.1",
+    "node-schedule": "^2.1.1",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.7",
