--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,13 @@
     "file-saver": "^2.0.5",
     "firebase": "^10.10.0",
     "flowbite-react": "^0.7.8",
+    "framer": "^2.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "leaveapplication": "file:..",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
+    "motion": "^11.17.0",
     "node-schedule": "^2.1.1",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
