--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "leaveapplication",
-  "version": "1.0.0",
+  "name": "vcet-connect-server",
+  "version": "0.0.1",
   "description": "",
   "type": "module",
   "main": "index.js",
