--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
     "@mui/x-charts": "^7.10.0",
+    "@react-pdf/renderer": "^4.1.6",
     "@reduxjs/toolkit": "^2.2.6",
     "@ubilabs/react-geosuggest": "^2.16.2",
     "classnames": "^2.5.1",
@@ -34,6 +35,7 @@
     "react-bootstrap": "^2.10.7",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
     "react-otp-input": "^3.1.1",
