--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-MONGO = mongodb+srv://navinkumaran2004:navinoh2004@leavedatacluster.fororiu.mongodb.net/CoreDataBase?retryWrites=true&w=majority&appName=LeaveDataCluster
-JWT_SECRET=encryptdecryptsecret
+# MONGO = mongodb+srv://navinkumaran2004:navinoh2004@leavedatacluster.fororiu.mongodb.net/CoreDataBase?retryWrites=true&w=majority&appName=LeaveDataCluster
+MONGO = mongodb://localhost:27017/LeaveDataBase
+JWT_SECRET= encryptdecryptsecret
 
 EMAIL= dineshkumarkkoffical@gmail.com
 EMAIL_PASSWORD = gzcvfxflmqatldbb
