--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
-# MONGO = mongodb+srv://navinkumaran2004:navinoh2004@leavedatacluster.fororiu.mongodb.net/CoreDataBase?retryWrites=true&w=majority&appName=LeaveDataCluster
-MONGO = mongodb://localhost:27017/LeaveDataBase
+MONGO = mongodb+srv://navinkumaran2004:navinoh2004@leavedatacluster.fororiu.mongodb.net/CoreDataBase?retryWrites=true&w=majority&appName=LeaveDataCluster
+# MONGO = mongodb+srv://vinothvcet2004:vinoth0509@cluster0.0pw1byu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGO = mongodb://localhost:27017/LeaveDataBase
 JWT_SECRET= encryptdecryptsecret
 
 EMAIL= dineshkumarkkoffical@gmail.com
 EMAIL_PASSWORD = gzcvfxflmqatldbb
+
+
+VITE_SCREENSHOT_API_KEY=74a39e
