--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.7",
     "react-circular-progressbar": "^2.1.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
