--- a/client/package.json
+++ b/client/package.json
@@ -44,11 +44,13 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.14.1",
+    "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "sass": "^1.77.6",
     "tailwind-scrollbar": "^3.1.0",
+    "tsparticles": "^3.8.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
