--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-google-drive-picker": "^1.2.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
