--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
@@ -52,6 +54,7 @@
     "sass": "^1.77.6",
     "tailwind-scrollbar": "^3.1.0",
     "tsparticles": "^3.8.0",
+    "vcet-connect-server": "file:..",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
