--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google/generative-ai": "^0.24.0",
     "@mui/material": "^5.16.0",
     "@mui/x-charts": "^7.10.0",
     "@react-pdf/renderer": "^4.1.6",
