PostHog and Leave Form changes added the completionProof in OD Requests

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# MONGO = mongodb+srv://navinkumaran2004:navinoh2004@leavedatacluster.fororiu.mongodb.net/CoreDataBase?retryWrites=true&w=majority&appName=LeaveDataCluster
-MONGO = mongodb+srv://vinothvcet2004:vinoth0509@cluster0.0pw1byu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO = mongodb+srv://navinkumaran2004:navinoh2004@leavedatacluster.fororiu.mongodb.net/CoreDataBase?retryWrites=true&w=majority&appName=LeaveDataCluster
+# MONGO = mongodb+srv://vinothvcet2004:vinoth0509@cluster0.0pw1byu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # MONGO = mongodb://localhost:27017/LeaveDataBase
 JWT_SECRET= encryptdecryptsecret
 CLOUD_NAME = "dnez6l71o"
@@ -12,3 +12,6 @@ EMAIL = navinkumaranoh@gmail.com
 EMAIL_PASSWORD = giyn fjyc eznj groq
 
 VITE_SCREENSHOT_API_KEY=74a39e  
+
+REACT_APP_PUBLIC_POSTHOG_KEY=phc_3Qo3nIXmfOpkHikNkltShhzDwrwszCmJ2WkF6JznhVm
+REACT_APP_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
